将views优化成面向vo的

--- a/templates/base.html
+++ b/templates/base.html
@@ -5,10 +5,10 @@
 <html lang="zh">
 <head>
     <meta charset="UTF-8">
-    <meta name="description" content="{{ description }}">
-    <meta name="keywords" content="{{ keywords }}">
+    <meta name="description" content="{{ header.description }}">
+    <meta name="keywords" content="{{ header.keywords }}">
 
-    <title>{{ title }}</title>
+    <title>{{ header.title }}</title>
 
     <!--Google Icon Font-->
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
