--- a/templates/main/archive.html
+++ b/templates/main/archive.html
@@ -32,7 +32,7 @@
         <div class="parallax"><img src="{% static 'main/img/index_bg.jpg' %}" alt="Parallax背景-归档-Kindem的博客"></div>
         <div class="center white-text">
             <br><br><br><br><br><br>
-            <h2>历史总是有趣的</h2>
+            <h2>{{ slogan_box.slogan }}</h2>
         </div>
     </div>
 {% endblock %}
