超多修复，优化登录界面

--- a/main/static/main/css/post.css
+++ b/main/static/main/css/post.css
@@ -45,6 +45,10 @@ body {
     padding-left: 0;
 }
 
+.section .extend .dropdown-content li {
+    list-style: none;
+}
+
 body .tags {
     margin: 0;
     padding: 0;
