--- a/templates/main/post.html
+++ b/templates/main/post.html
@@ -143,7 +143,7 @@
     <div id="login-modal-local" class="modal">
         <div class="modal-content">
             <div class="row">
-                <div class="col s12 m12 l6 xl6 offset-l3 offset-xl3">
+                <div class="col s12 m12 l8 xl6 offset-l2 offset-xl3">
                     <br>
                     <br>
                     <h4 class="center">本站用户登录</h4>
@@ -184,7 +184,6 @@
 {% endblock %}
 
 {% block additional-js %}
-    <script src="{% static 'main/js/post.js' %}" rel="stylesheet"></script>
     <script src="{% static 'main/lib/tool/secret/salt.js'%}" rel="stylesheet"></script>
     <script src="{% static 'main/lib/tool/secret/sha256.min.js' %}" rel="stylesheet"></script>
     <script>
@@ -213,7 +212,7 @@
                 alignment: 'left',
                 stopPropagation: false
             });
-
+s
             // Modal 控件初始化
             $('.modal').modal({
                 dismissible: true,
@@ -230,75 +229,6 @@
 
                     // 快速注册按钮响应
                     $('#login-local-register-btn').click(function () {
-                        Materialize.toast('设置好用户名和密码后，就点击确认键来完成注册吧!', 4000);
-                        $('#login-local-register-block').html(
-                            "<br class='hide-on-med-and-up'>" +
-                            "<a class='btn orange lighten-3 waves-effect' id='login-local-enter-btn'>" +
-                            "   &nbsp;&nbsp;&nbsp;确认&nbsp;&nbsp;&nbsp;" +
-                            "<br class='hide-on-med-and-up'>"
-                        );
-                        $('#login-local-enter-btn').click(function () {
-                            var username = $('#login-local-username').val();
-                            var password = $('#login-local-password').val();
-                            // 表单验证
-                            if (/^[a-zA-Z][a-zA-Z0-9_]{7,15}$/.test(username)) {
-                                if (/^[a-zA-Z0-9_@#]{8,16}$/.test(password)) {
-                                    var salt = get_salt();
-                                    // 加密密码
-                                    password_hash = sha256(sha256(password) + salt);
-                                    // 封装 json 对象
-                                    var obj = {
-                                        username: username,
-                                        password: password_hash,
-                                        salt: salt
-                                    };
-                                    // 发送 Ajax 请求
-                                    $.ajax({
-                                        url: '',
-                                        type: 'post',
-                                        data_type: 'json',
-                                        data: JSON.stringify(),
-                                        async: true,
-                                        success: function (jsonObj) {
-                                            // 如果注册成功了
-                                            if (jsonObj.state) {
-                                                // 注册成功
-                                                Materialize.toast('注册成功,两秒后为你刷新页面', 4000);
-                                                setTimeout(
-                                                    function () {
-                                                        // 刷新页面
-                                                        window.location.reload(true)
-                                                    }, 2000
-                                                );
-                                            } else {
-                                                // 提示错误信息
-                                                Materialize.toast(jsonObj.reason, 4000);
-                                            }
-                                        }
-                                    });
-                                // 如果密码验证失败
-                                } else {
-                                    Materialize.toast('密码不符合要求(8-16位,可以使用字母数字下划线@#符号)', 4000);
-                                }
-                            // 如果用户名验证失败
-                            } else {
-                                Materialize.toast('用户名不符合要求(8-16位,可以使用字母数字下划线,必须以字母开头)', 4000);
-                            }
-                        });
-                    });
-                }
-                // startingTop: '30%',
-                // endingTop: '70%',
-                // ready: function(modal, trigger) {
-                    // nothing
-                // },
-                // complete: function() {
-                    // nothing
-                // }
-            });
-
-            // 快速注册按钮响应
-            $('#login-local-register-btn').click(function () {
                 Materialize.toast('设置好用户名和密码后，就点击确认键来完成注册吧!', 4000);
                 $('#login-local-register-block').html(
                     "<br class='hide-on-med-and-up'>" +
@@ -310,7 +240,7 @@
                     var username = $('#login-local-username').val();
                     var password = $('#login-local-password').val();
                     // 表单验证
-                    if (/^[a-zA-Z][a-zA-Z0-9_]{7,15}$/.test(username)) {
+                    if (/^[a-zA-Z][a-zA-Z0-9_]{5,15}$/.test(username)) {
                         if (/^[a-zA-Z0-9_@#]{8,16}$/.test(password)) {
                             var salt = get_salt();
                             // 加密密码
@@ -323,7 +253,7 @@
                             };
                             // 发送 Ajax 请求
                             $.ajax({
-                                url: '',
+                                url: '/login/register/local',
                                 type: 'post',
                                 data_type: 'json',
                                 data: JSON.stringify(),
@@ -351,7 +281,76 @@
                         }
                     // 如果用户名验证失败
                     } else {
-                        Materialize.toast('用户名不符合要求(8-16位,可以使用字母数字下划线,必须以字母开头)', 4000);
+                        Materialize.toast('用户名不符合要求(6-16位,可以使用字母数字下划线,必须以字母开头)', 4000);
+                    }
+                });
+            });
+                }
+                // startingTop: '30%',
+                // endingTop: '70%',
+                // ready: function(modal, trigger) {
+                    // nothing
+                // },
+                // complete: function() {
+                    // nothing
+                // }
+            });
+
+            // 快速注册按钮响应
+            $('#login-local-register-btn').click(function () {
+                Materialize.toast('设置好用户名和密码后，就点击确认键来完成注册吧!', 4000);
+                $('#login-local-register-block').html(
+                    "<br class='hide-on-med-and-up'>" +
+                    "<a class='btn orange lighten-3 waves-effect' id='login-local-enter-btn'>" +
+                    "   &nbsp;&nbsp;&nbsp;确认&nbsp;&nbsp;&nbsp;" +
+                    "<br class='hide-on-med-and-up'>"
+                );
+                $('#login-local-enter-btn').click(function () {
+                    var username = $('#login-local-username').val();
+                    var password = $('#login-local-password').val();
+                    // 表单验证
+                    if (/^[a-zA-Z][a-zA-Z0-9_]{5,15}$/.test(username)) {
+                        if (/^[a-zA-Z0-9_@#]{8,16}$/.test(password)) {
+                            var salt = get_salt();
+                            // 加密密码
+                            password_hash = sha256(sha256(password) + salt);
+                            // 封装 json 对象
+                            var obj = {
+                                username: username,
+                                password: password_hash,
+                                salt: salt
+                            };
+                            // 发送 Ajax 请求
+                            $.ajax({
+                                url: '/login/register/local',
+                                type: 'post',
+                                data_type: 'json',
+                                data: JSON.stringify(),
+                                async: true,
+                                success: function (jsonObj) {
+                                    // 如果注册成功了
+                                    if (jsonObj.state) {
+                                        // 注册成功
+                                        Materialize.toast('注册成功,两秒后为你刷新页面', 4000);
+                                        setTimeout(
+                                            function () {
+                                                // 刷新页面
+                                                window.location.reload(true)
+                                            }, 2000
+                                        );
+                                    } else {
+                                        // 提示错误信息
+                                        Materialize.toast(jsonObj.reason, 4000);
+                                    }
+                                }
+                            });
+                        // 如果密码验证失败
+                        } else {
+                            Materialize.toast('密码不符合要求(8-16位,可以使用字母数字下划线@#符号)', 4000);
+                        }
+                    // 如果用户名验证失败
+                    } else {
+                        Materialize.toast('用户名不符合要求(6-16位,可以使用字母数字下划线,必须以字母开头)', 4000);
                     }
                 });
             });
